[examples] cleanly shutdown user media source

--- a/examples/server/index.html
+++ b/examples/server/index.html
@@ -156,9 +156,13 @@ function start() {
 }
 
 function stop() {
+    document.getElementById('stop').style.display = 'none';
+
     clearInterval(dcInterval);
+    pc.getSenders().forEach(function(sender) {
+        sender.track.stop();
+    });
     pc.close();
-    getElementById('stop').style.display = 'none';
 }
 
 </script>
