[examples] make datachannel optional

--- a/examples/server/index.html
+++ b/examples/server/index.html
@@ -5,6 +5,9 @@
 </head>
 <body>
 
+<label for="use-datachannel">Use datachannel</label>
+<input id="use-datachannel" checked="checked" type="checkbox"/>
+
 <label for="use-audio">Use audio</label>
 <input id="use-audio" checked="checked" type="checkbox"/>
 
