[examples] make it possible to not transform video

--- a/examples/server/index.html
+++ b/examples/server/index.html
@@ -22,7 +22,7 @@
     }
 
     #media {
-        max-width: 640px;
+        max-width: 1280px;
     }
     </style>
 </head>
@@ -42,8 +42,9 @@
     <label for="use-video">Use video</label>
     <select id="video-transform">
         <option value="edges">Edge detection</option>
-        <option value="green">Green frame</option>
         <option value="rotate">Rotate</option>
+        <option value="green">Green frame</option>
+        <option value="none">None</option>
     </select>
 </div>
 
