[examples] make it possible to control video resolution

--- a/examples/server/index.html
+++ b/examples/server/index.html
@@ -40,6 +40,13 @@
 <div class="option">
     <input id="use-video" type="checkbox"/>
     <label for="use-video">Use video</label>
+    <select id="video-resolution">
+        <option value="">Default resolution</option>
+        <option value="320x240">320x240</option>
+        <option value="640x480">640x480</option>
+        <option value="960x540">960x540</option>
+        <option value="1280x720">1280x720</option>
+    </select>
     <select id="video-transform">
         <option value="edges">Edge detection</option>
         <option value="rotate">Rotate</option>
