--- a/examples/server/index.html
+++ b/examples/server/index.html
@@ -53,6 +53,11 @@
         <option value="green">Green frame</option>
         <option value="none">None</option>
     </select>
+    <select id="video-codec">
+        <option value="default" selected>Default</option>
+        <option value="VP8/90000">VP8/90000</option>
+        <option value="H264/90000">H264/90000</option>
+    </select>
 </div>
 
 <button id="start" onclick="start()">Start</button>
