--- a/examples/server/index.html
+++ b/examples/server/index.html
@@ -58,6 +58,10 @@
         <option value="H264/90000">H264/90000</option>
     </select>
 </div>
+<div class="option">
+    <input id="use-stun" type="checkbox"/>
+    <label for="use-stun">Use STUN server</label>
+</div>
 
 <button id="start" onclick="start()">Start</button>
 <button id="stop" style="display: none" onclick="stop()">Stop</button>
