[data channels] add support for maxPacketLifeTime

--- a/examples/server/index.html
+++ b/examples/server/index.html
@@ -35,6 +35,7 @@
     <select id="datachannel-parameters">
         <option value='{"ordered": true}'>Ordered, reliable</option>
         <option value='{"ordered": false, "maxRetransmits": 0}'>Unordered, no retransmissions</option>
+        <option value='{"ordered": false, "maxPacketLifetime": 500}'>Unordered, 500ms lifetime</option>
     </select>
 </div>
 <div class="option">
