[examples] add cartoon effect to server demo

--- a/examples/server/index.html
+++ b/examples/server/index.html
@@ -61,6 +61,7 @@
     <select id="video-transform">
         <option value="none" selected>No transform</option>
         <option value="edges">Edge detection</option>
+        <option value="cartoon">Cartoon effect</option>
         <option value="rotate">Rotate</option>
     </select>
     <select id="video-codec">
