Add playsinline to video elems for ios compatibility

--- a/examples/webcam/index.html
+++ b/examples/webcam/index.html
@@ -26,7 +26,7 @@
     <h2>Media</h2>
 
     <audio id="audio" autoplay="true"></audio>
-    <video id="video" autoplay="true"></video>
+    <video id="video" autoplay="true" playsinline="true"></video>
 </div>
 
 <script src="client.js"></script>
