--- a/examples/server/index.html
+++ b/examples/server/index.html
@@ -93,7 +93,7 @@
     <h2>Media</h2>
 
     <audio id="audio" autoplay="true"></audio>
-    <video id="video" autoplay="true"></video>
+    <video id="video" autoplay="true" playsinline="true"></video>
 </div>
 
 <h2>Data channel</h2>
